...
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".firstPageAndLogIn.MainActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo"
        android:contentDescription="@string/app_name"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:src="@drawable/logo"/>


    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>
