...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".firstPageAndLogIn.LogInFragment">


    <EditText
        android:id="@+id/emailLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
...
